# gridtokenx-forecase-ml

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENT.md  Dockerfile  GEMINI.md  PLAN.md  README.md  VALIDATION_PLAN.md  api_state.db  colab-playbook.md  colab_train.py  config.yaml  deep-research.md  deep-research2.md  docker-compose.yml  evaluate.py  justfile  main.py  master_ goal.md  merged_coords.json  new_feature.json  package-lock.json  package.json  pyproject.toml  requirements.txt  solution1.md  solution2.md  solution3.md  solution4.md  solution5.md  target_feature.json  test_agent_local.py  vercel.json
.qwen/: PROJECT_SUMMARY.md  settings.json  settings.json.orig  welcome-back-state.json
agent/: gemma_client.py  tools.py  use_cases.py
api/: grid_core.py  index.py  main.py  physics_simulator.py  rt_simulator.py  serve.py  startup_check.py
data/: calibrate_with_real_data.py  cleanup.py  fetch_nrel_perform.py  fetch_public_datasets.py  fetch_public_microgrid.py  generate_dataset.py  integrate_pea_raw.py  integrate_raw.py  kireip_proxy.py  ko_tao_grid.parquet  ko_tao_network.geojson  load_postgis.py  pea_onboard.py  pipeline.py  preprocess.py  raw_tourism_samui.csv  scaler.pkl  test.parquet  train.parquet  val.parquet
docs/: 1.md  CORE_STACK_ANALYSIS.md  DATA_PIPELINE.md  DVF.md  EXECUTION_PLAN_20_DAYS.md  PEA_SCADA_INTEGRATION.md  PLAN.md  PLAN_System_Architecture_v2.md  TECHNICAL_TOOLS_POC.md  VALIDATION_PLAN.md  deep-research2.md  master_goal.md  single_line_diagram.txt  system_assessment.md
domain/: dispatch.py  entities.py  grid.py  interfaces.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
models/: device.py  hybrid_pipeline.py  lgbm_model.py  meta_learner.pkl  mlflow_utils.py  schema.py  tcn.pt  tcn_model.py
notebooks/: analysis.ipynb  analysis_executed.ipynb
optimizer/: admm_resilience.py  cluster_dispatch_admm.py  cluster_stress_test.py  contingency_analysis.py  dispatch.py  early_warning.py  isca.py  pea_dispatch_opt.py  run_optimization.py  tune.py
research/: analyze_grid_geo.py  backtest_pea.py  cascading_failure.py  cluster_stress_test.py  (+22 more)
(+158 files in other folders)
