[project]
name = "gridtokenx-forecase-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "lightgbm==4.3.0",
    "matplotlib==3.8.4",
    "notebook==7.1.3",
    "numpy==1.26.4",
    "optuna>=4.8.0",
    "pandas==2.2.2",
    "pyarrow==16.0.0",
    "pyyaml==6.0.1",
    "scikit-learn==1.4.2",
    "torch==2.3.0",
    "uvicorn==0.29.0",
]
